# powerpointless

./: .gitignore  README.md  create_subtitles_webapp.py  extract_subtitles_webapp.py  powerpointless-gui.py  pyproject.toml  requirements.txt  scratchpad.py
powerpointless/: __init__.py  __main__.py  build_slides.py  core.py  create_subtitles_webapp.py  extract_subtitles_webapp.py  webapp.py
